--- a/MainWindow.fxml
+++ b/MainWindow.fxml
@@ -1413,38 +1413,55 @@
                                                       <Insets left="4.0" />
                                                    </padding>
                                                 </VBox>
-                                                <HBox alignment="CENTER" prefHeight="88.0" prefWidth="128.0" spacing="8">
-                                                   <children>
-                                                      <ImageView fx:id="clipboardLabel" fitHeight="14.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true">
-                                                         <image>
-                                                            <Image url="@sprites/CLIPBOARD_LABEL.png" />
-                                                         </image>
-                                                      </ImageView>
-                                                      <ImageView fx:id="clipboardButton" fitHeight="32.0" fitWidth="32.0" pickOnBounds="true" preserveRatio="true">
-                                                         <image>
-                                                            <Image url="@sprites/CLIPBOARD_RELEASED.png" />
-                                                         </image>
-                                                      </ImageView>
-                                                      <ImageView fx:id="timesig_4_4" fitHeight="32.0" fitWidth="32.0" pickOnBounds="true" preserveRatio="true">
-                                                         <image>
-                                                            <Image preserveRatio="false" smooth="false" url="@sprites/TIMESIG_4_4_RELEASED.png" />
-                                                         </image>
-                                                      </ImageView>
-                                                      <ImageView fx:id="timesig_3_4" fitHeight="32.0" fitWidth="32.0" pickOnBounds="true" preserveRatio="true">
-                                                         <image>
-                                                            <Image preserveRatio="false" smooth="false" url="@sprites/TIMESIG_3_4_RELEASED.png" />
-                                                         </image>
-                                                      </ImageView>
-                                                      <ImageView fx:id="timesig_custom" fitHeight="32.0" fitWidth="32.0" pickOnBounds="true" preserveRatio="true">
-                                                         <image>
-                                                            <Image preserveRatio="false" smooth="false" url="@sprites/TIMESIG_CUSTOM_RELEASED.png" />
-                                                         </image>
-                                                      </ImageView>
-                                                   </children>
-                                                   <padding>
-                                                      <Insets left="4.0" right="4.0"/>
-                                                   </padding>
-                                                </HBox>
+                                                <HBox alignment="CENTER" spacing="8.0">
+                                                  <children>
+	                                                <VBox alignment="CENTER" prefHeight="88.0" prefWidth="128.0">
+	                                                   <children>
+	                                                      <ImageView fx:id="clipboardLabel" fitHeight="14.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true">
+	                                                         <image>
+	                                                            <Image url="@sprites/CLIPBOARD_LABEL.png" />
+	                                                         </image>
+	                                                      </ImageView>
+	                                                      <ImageView fx:id="clipboardButton" fitHeight="32.0" fitWidth="32.0" pickOnBounds="true" preserveRatio="true">
+	                                                         <image>
+	                                                            <Image url="@sprites/CLIPBOARD_RELEASED.png" />
+	                                                         </image>
+	                                                      </ImageView>
+	                                                   </children>
+	                                                   <padding>
+	                                                      <Insets left="4.0" />
+	                                                   </padding>
+	                                                </VBox>
+	                                                <VBox alignment="CENTER">
+	                                                  <children>
+	                                                    <ImageView id="timesigLabel" preserveRatio="true">
+	                                                      <image>
+	                                                        <Image url="@sprites/TIMESIG_LABEL.png"/>
+	                                                      </image>
+	                                                    </ImageView>
+	                                                    <HBox alignment="CENTER" spacing="4.0">
+	                                                      <children>
+	                                                        <ImageView fx:id="timesig_4_4" preserveRatio="true">
+	                                                          <image>
+	                                                            <Image url="@sprites/TIMESIG_4_4_RELEASED.png"/>
+	                                                          </image>
+	                                                        </ImageView>
+	                                                        <ImageView fx:id="timesig_3_4" preserveRatio="true">
+	                                                          <image>
+	                                                            <Image url="@sprites/TIMESIG_3_4_RELEASED.png"/>
+	                                                          </image>
+	                                                        </ImageView>
+	                                                        <ImageView fx:id="timesig_custom" preserveRatio="true">
+	                                                          <image>
+	                                                            <Image url="@sprites/TIMESIG_CUSTOM_RELEASED.png"/>
+	                                                          </image>
+	                                                        </ImageView>
+	                                                      </children>
+	                                                    </HBox>
+	                                                  </children>
+	                                                </VBox>
+	                                              </children>
+	                                            </HBox>
                                 <VBox id="VBox" alignment="CENTER" prefHeight="88.0" prefWidth="104.0">
                                   <children>
                                                       <ImageView id="" fitHeight="14.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true">
